uptime-kuma/templates/uptime-kuma-service.yaml
apiVersion: v1

kind: Service

metadata:
  labels:
    io.kompose.service: uptime-kuma
  name: uptime-kuma
  namespace: uptime

spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001

  selector:
    io.kompose.service: uptime-kuma
